--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">Rizan Buhary</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -21,7 +21,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">Rizan Buhary</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -38,16 +38,16 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
+        <img src="./assets/profile-pic.png" alt="Rizan Buhary profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">John Doe</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <h1 class="title">Rizan Buhary</h1>
+        <p class="section__text__p2">Platform Engineer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/Rizan_Buhary_Resume.pdf')"
           >
             Download CV
           </button>
@@ -60,13 +60,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/rizanbuhary/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/rizanme'"
           />
         </div>
       </div>
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>10+ years <br />DevOps and Platform Engineering</p>
             </div>
             <div class="details-container">
               <img
@@ -100,17 +100,14 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>IT & Strategic Innovation<br />B.Sc. Management Information Systems</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              An innovative DevOps expert with 10+ years of hands-on experience designing, 
+              implementing, maintaining, automating and optimizing mission-critical and 
+              cutting-edge deployments on multi-cloud platforms!
             </p>
           </div>
         </div>
@@ -128,7 +125,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Platform Engineering</h2>
             <div class="article-container">
               <article>
                 <img
@@ -137,7 +134,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
+                  <h3>Kubernetes</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -148,7 +145,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS</h3>
+                  <h3>Docker</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -159,8 +156,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
-                  <p>Intermediate</p>
+                  <h3>Cloud: AWS Azure</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -170,8 +167,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <h3>CICD</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -181,8 +178,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>TypeScript</h3>
-                  <p>Basic</p>
+                  <h3>Configuration Management</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -192,14 +189,14 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
-                  <p>Intermediate</p>
+                  <h3>Dynatrace</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Platform Engineering</h2>
             <div class="article-container">
               <article>
                 <img
@@ -208,8 +205,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Basic</p>
+                  <h3>Scripting: Bash PowerShell</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -219,8 +216,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Node JS</h3>
-                  <p>Intermediate</p>
+                  <h3>Nginx</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -230,8 +227,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
-                  <p>Intermediate</p>
+                  <h3>Markup: YAML, XML</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -241,8 +238,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
-                  <p>Intermediate</p>
+                  <h3>Windows,Linux,Mac</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
             </div>
@@ -257,7 +254,7 @@
       />
     </section>
     <section id="projects">
-      <p class="section__text__p1">Browse My Recent</p>
+      <p class="section__text__p1">Work Experience</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
@@ -352,7 +349,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:rizanme@gmail.com">rizanme@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -360,7 +357,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/rizanbuhary/">LinkedIn</a></p>
         </div>
       </div>
     </section>
@@ -375,7 +372,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2023 Rizan Buhary. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
