--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>IT & Strategic Innovation<br />B.Sc. Management Information Systems</p>
+              <p>M.Sc. IT & Strategic Innovation<br />B.Sc. Management Information Systems</p>
             </div>
           </div>
           <div class="text-container">
